# gyver-attrs

./: .cz.toml  .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  pytest.ini  t.py
gyver/attrs/: __init__.py  field.py  main.py  methods.py  resolver.py
gyver/attrs/converters/: json.py  utils.py
gyver/attrs/utils/: factory.py  functions.py
tests/: test_gattrs_utils.py  test_main.py  test_shortcuts.py
