[tool.poetry]
name = "gyver-attrs"
version = "0.1.0"
description = ""
authors = ["Gustavo Cardoso <self.gustavocorrea@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.5.0"


[tool.poetry.group.lint.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
autoflake = "^2.0.1"
flake8 = "^6.0.0"


[tool.poetry.group.compare.dependencies]


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
